Deselect selection when pasting from the clipboard

Now, when the user pastes data from clipboard, any active selection
is automatically deselected.

For "Paste" and "Paste At" the deselection action is baked into
the actual later addition action. For "Paste Into" action, the
deselection is added as a separate step.

BUG:459162